tests/error/native_unsupported_pointer.vbc
int main() {
    int value = 1;
    int* ptr = &value;
    return *ptr;
}
